# tap-channeldock

./: .gitignore  README.md  meltano.yml  pyproject.toml  tox.ini
tap_channeldock/: __init__.py  auth.py  client.py  streams.py  tap.py
